@@ -2034,6 +2034,50 @@ Example    : \n\r\
 Description: \n\r\
 Makes the mob or item unable to be sold to a shopkeeper.
 
+PROP_USEADJUSTER=\
+Property   : Prop_UseAdjuster\n\r\
+Targets    : Items\n\r\
+Parameters : statistic names followed by a +, -, or = and a value\n\r\
+Parameters : (reversed)\n\r\
+Parameters : The above parameters may be followed by an optional mask\n\r\
+Example    : move+100 class=thief race=elf gender=F\n\r\
+Example    : dex-1 reversed MASK=-Race +Dwarf\n\r\
+Description: \n\r\
+When the item with this property is used in a particular way, the listed effects will be \
+permanently given to the owner.   For items, trigger use includes:\n\r\
+Food, Drink: EAT/DRINK\n\r\
+Weapon: Doing damage with (can be reversed)\n\r\
+Container: Putting something into\n\r\
+Armor: Taking damage while wearing properly\n\r\
+The REVERSED parameter is special, and means that instead of the effect going to \
+the owner of the item, it goes to the other party in a trigger, such as to the \
+target instead of the owner when a weapon does damage, or to the attacker instead \
+of the owner when taking damage with an armor.\n\r\
+All parameters use the + or - adjuster, except the \
+class, race, and gender parameters noted above. \
+Valid parameters are as follows: \n\r\
+strength dexterity constitution charisma wisdom intelligence \n\r\
+maxstr maxdex maxcon maxcha maxwis maxint (maximum trainable) \n\r\
+savepar savefir savecol savewat savegas savemin savegen savejus \n\r\
+saveaci saveele savepoi saveund savemag savedis savetra \n\r\
+ability (magical level), armor, attacks (prowess), damage (max), \
+disposition (sitting/standing/flying/etc), level, rejuv(!NO!), \
+senses (blind/infravision/darkvision/etc), speed (#attacks), \
+height, weight, gender, class, race, hitpoints, hunger (stomach size), \
+mana, movement, thirst (stomach size) conversion weightadj saveblunt \
+savepierce saveslash savespells saveprayers savesongs savechants \
+critpctweapons critpctmagic critdmgweapons critdmgmagic. \n\r\
+\n\r\
+By default, the values + or - are added to the existing values.  However, if \
+MULTIPLYPH=true is included in the parameters, then attack, armor, and damage \
+will instead have their values multiplied by the given value / 100. Likewise, \
+if MULTIPLYCH=true is included, then hitpoints, mana, and movement are similarly \
+multiplied instead of added.  All other values act the same.\
+\n\r\
+The parameters may also END with the key word MASK= followed by a mask.  This \
+mask will select which kinds of mobs and players will be affected by this property. \
+See ZAPPERMASKS for more information on zapper mask syntax.
+
 PROP_USEEMOTER=\
 Property   : Prop_UseEmoter\n\r\
 Targets    : Item\n\r\
