@@ -55,6 +55,7 @@
   53. Can now ignore an account, which seems obvious when I think about it.
   54. Most crafting expertises split-up and made more expensive -- backward comp.
   55. Can now disable showing experience in Score and in the Prompt using DISABLE cmd.
+  56. New Property: Prop_UseAdjuster, mostly insane, but good for special potion effects.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
